<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_pid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/label_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pid"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:switchPadding="5dp"
                android:text="@string/label_start_welcome"
                android:thumbTextPadding="10dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/array_rank"
                android:padding="10dp" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:switchPadding="5dp"
                android:text="@string/label_thx_gift"
                android:thumbTextPadding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:switchPadding="5dp"
                android:text="@string/label_thx_attention"
                android:thumbTextPadding="10dp" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="10dp"
                android:switchPadding="5dp"
                android:text="粉  丝  团"
                android:thumbTextPadding="10dp" />

            <Spinner
                android:id="@+id/spinner_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/array_time"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/switch_flower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:switchPadding="5dp"
                android:text="@string/label_thx_flower"
                android:thumbTextPadding="10dp" />
        </LinearLayout>
    </LinearLayout>





    <LinearLayout
        android:id="@+id/ll_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_layout">

        <EditText
            android:id="@+id/et_attention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|top"
            android:hint="请输入定时欢迎"
            android:minLines="4"
            android:padding="10dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="保存" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_layout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="使用说明 : \n                1.点击进入下面的按钮打开服务, 打开Now直播场控的服务开关, 切记不要关闭服务和这个页面(用home键关闭, 保证后台运行)\n             2.切换到Now之后,并打开消息输入框保证键盘弹出,保持这样."
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickOpen"
            android:text="点击打开服务" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>